# openworld

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  OPENWORLD_COMPLETE_PLAN.md  OPENWORLD_COMPLETION_PLAN.md  README.md  ROADMAP.md  build-android.sh  test-config.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  BATCH5_PLAN.md  CHANGELOG.md  JNI_ALIGNMENT_REPORT.md  README.md  README_CN.md  build.gradle.kts  build_rust.ps1  gradle.properties  settings.gradle.kts  verify_jni_alignment.ps1
android-sdk/com/openworld/core/: OpenWorldCore.java
android/.agent/skills/debug/: SKILL.md
android/.github/workflows/: android.yml  release-please.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: custom_barcode_scanner.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  shortcuts.xml
android/app/src/test/resources/subscriptions/: lu71.yaml
android/config/detekt/: baseline.xml
benches/: dns_resolve.rs  mux_throughput.rs  relay_throughput.rs  router_match.rs
deploy/: docker-compose.yml  install.sh  openworld.service
docs/: CONFIG_REFERENCE.md  OPENWORLDCORE_API_ERROR_CODES.md  OPENWORLDCORE_KERNEL_ANALYSIS.md
docs/contracts/: latency-init-schema-v1.json  latency-init-schema-v1.md
scripts/: build_android.ps1  check_docs_terminology.py  openworld.service  perf_baseline.ps1
src/: lib.rs  main.rs
src/api/: handlers.rs  log_broadcast.rs  mod.rs  models.rs  v2ray_stats.rs
src/app/: access_log.rs  android.rs  auth.rs  benchmark.rs  cert.rs  clash_mode.rs  dispatcher.rs  ffi.rs  inbound_manager.rs  latency_test.rs  mod.rs  ops.rs  outbound_manager.rs  platform.rs  proxy_provider.rs  release.rs  resilience.rs  security.rs  service.rs  system_proxy.rs  tracker.rs  traffic_persist.rs
src/common/: addr.rs  dialer.rs  error.rs  ktls.rs  mod.rs  stream.rs  tls.rs  tls_reload.rs  traffic.rs  udp.rs
src/config/: compat.rs  encryption.rs  enhance.rs  json_compat.rs  mod.rs  profile.rs  subscription.rs  types.rs
src/config/zenone/: bridge.rs  converter.rs  encoder.rs  error.rs  merge.rs  mod.rs  normalizer.rs  parser.rs  types.rs  validator.rs
src/derp/: protocol.rs  server.rs
src/dns/: cache.rs  dhcp.rs  fakeip.rs  hosts.rs  mod.rs  resolver.rs
src/plugin/: engine.rs  host_api.rs  manager.rs  mod.rs
src/proxy/: connection_pool.rs  mod.rs  nat.rs  relay.rs  sniff.rs
src/proxy/group/: fallback.rs  health.rs  latency_weighted.rs  loadbalance.rs  mod.rs  persistence.rs  selector.rs  sticky.rs  urltest.rs
src/proxy/inbound/: dns_hijack.rs  http.rs  hysteria2.rs  icmp.rs  mixed.rs  mod.rs  shadowsocks.rs  socks5.rs  transparent.rs  trojan.rs  tun.rs  tun_device.rs  tun_stack.rs  vless.rs  vmess.rs  wireguard_endpoint.rs
src/proxy/mux/: h2mux.rs  mod.rs  singmux.rs  smux.rs  xudp.rs  yamux.rs
src/proxy/outbound/: chain.rs  direct.rs  http.rs  hysteria_v1.rs  mod.rs  naive.rs  pool.rs  reject.rs  socks5.rs  ssh.rs  tor.rs
src/proxy/outbound/hysteria2/: auth.rs  mod.rs  protocol.rs  quic.rs
src/proxy/outbound/masque/: connect_ip.rs  mod.rs  stack.rs  tls.rs
src/proxy/outbound/shadowsocks/: crypto.rs  mod.rs
src/proxy/outbound/trojan/: mod.rs  protocol.rs
src/proxy/outbound/tuic/: mod.rs
src/proxy/outbound/vless/: mod.rs  protocol.rs  reality.rs  tls.rs  vision.rs
src/proxy/outbound/vmess/: mod.rs  protocol.rs
src/proxy/outbound/wireguard/: mod.rs  noise.rs
src/proxy/transport/: anytls.rs  brutal.rs  ech.rs  fingerprint.rs  fragment.rs  grpc.rs  h2.rs  httpupgrade.rs  mod.rs  reality.rs  shadowtls.rs  tcp.rs  tls.rs  ws.rs
src/proxy/transport/sudoku/: conn.rs  crypto.rs  grid.rs  handshake.rs  httpmask.rs  layout.rs  mod.rs  table.rs
src/router/: geo_update.rs  geoip.rs  geosite.rs  mod.rs  process.rs  provider.rs  rules.rs  srs.rs  trie.rs
tests/: e2e_protocol_loopback.rs  e2e_socks_proxy.rs  phase10_dns_cache.rs  phase10_inbound.rs  phase10_protocols.rs  phase11_observability.rs  phase11_performance_baseline.rs  phase12_p2_integration.rs  phase13_p1_integration.rs  phase3_baseline.rs  phase3_e2e.rs  phase4_protocol_e2e.rs  phase5_api.rs  phase5_routing.rs  phase6_proxy_groups.rs  phase7_transport.rs  phase8_rule_provider.rs  phase9_hot_reload.rs
(+213 files in other folders)
