[package]
name = "openworld"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
tokio-rustls = "0.26"
h3 = "0.0.8"
h3-quinn = "0.0.10"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
ipnet = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "0.26"
http = "1"
async-trait = "0.1"
rand = "0.8"
futures-lite = "2"
