[package]
name = "openworld"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
tokio-rustls = "0.26"
h3 = "0.0.8"
h3-quinn = "0.0.10"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
ipnet = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "0.26"
http = "1"
async-trait = "0.1"
rand = "0.8"
futures-lite = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
maxminddb = "0.24"
tokio-tungstenite = "0.26"
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
futures-util = "0.3"
h2 = "0.4"
chacha20poly1305 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
