[package]
name = "openworld"
version = "0.1.0"
edition = "2021"

[lib]
name = "openworld"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli", "ech", "ssh"]
ech = []
cli = ["clap", "notify"]
android = ["jni", "android_logger"]
ssh = ["russh", "russh-keys", "ssh-key"]


[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
tokio-rustls = "0.26"
h3 = "0.0.8"
h3-quinn = "0.0.10"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
ipnet = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "0.26"
http = "1"
async-trait = "0.1"
rand = "0.8"
futures-lite = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
maxminddb = "0.24"
tokio-tungstenite = "0.26"
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }
futures-util = "0.3"
h2 = "0.4"
chacha20poly1305 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
base64 = "0.22"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
socket2 = { version = "0.5", features = ["all"] }
blake3 = "1.8.3"
log = "0.4"

# CLI-only deps (excluded on Android)
clap = { version = "4", features = ["derive"], optional = true }
notify = { version = "8.2.0", features = ["macos_fsevent"], optional = true }

# Android-only deps
jni = { version = "0.21", optional = true }
android_logger = { version = "0.14", optional = true }

# SSH tunnel support (optional, heavy dep)
russh = { version = "0.48", optional = true }
russh-keys = { version = "0.48", optional = true }
ssh-key = { version = "0.6", optional = true }


[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "router_match"
harness = false

[[bench]]
name = "dns_resolve"
harness = false

[[bench]]
name = "mux_throughput"
harness = false

[profile.release]
opt-level = "z"       # 优化体积而非速度
lto = true            # 全量链接时优化，去除未用代码
codegen-units = 1     # 单编译单元，更深优化
panic = "abort"       # 不生成 unwind 表，减小体积
strip = true          # 去除所有调试符号
